<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_bg_gray2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="(必选)请选择你想要反馈的问题点"
        android:layout_marginTop="20dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFF">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_1"
            android:background="@drawable/border_bottom_gray"
            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_2"
            android:background="@drawable/border_bottom_gray"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_3"
            android:background="@drawable/border_bottom_gray"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_4"
            android:background="@drawable/border_bottom_gray"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_5"
            android:background="@drawable/border_bottom_gray" />
    </TableLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="请补充详细问题和意见"
        android:layout_marginTop="20dp"/>
    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="100dp"
        android:background="@color/colorWhite">
        <EditText
            android:id="@+id/et_option"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="请输入不少于10个字的描述"
            android:background="@null"
            android:maxLength="140"/>
    </ScrollView>

    <Button
        android:id="@+id/myo_bt_commit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_margin"
        android:text="提交"
        android:textColor="@color/colorBlue"
        android:background="@color/colorWhite"/>
</LinearLayout>
